--- a/index.html
+++ b/index.html
@@ -469,6 +469,6 @@
                 </div>
             </div>
         </div>
-        <script src="" async defer></script>
+        <script src="./index.js" async defer></script>
     </body>
 </html>
