Implemented smooth scroll

--- a/index.html
+++ b/index.html
@@ -470,5 +470,6 @@
             </div>
         </div>
         <script src="./index.js" async defer></script>
+        <script src="zenscroll/zenscroll-min.js"></script>
     </body>
 </html>
