--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="vertical-line"></div>
                     <div class="details">
                         <div class="description">
-                            <div class="text">
+                            <div class="paragraph">
                                 <h2 class="project-name">Diner App</h2>
                                 <h3 class="project-idea">
                                     An app made to help you choose a place to
