Changed all the icon images to icons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
         />
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-1/css/all.min.css">
     </head>
     <body>
         <div id="hero">
@@ -38,35 +39,19 @@
                             href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/"
                             target="_blank"
                         >
-                            <img
-                                src="resources/linkedin.png"
-                                alt="LinkedIn Logo"
-                                class="icon"
-                            />
+                            <i class="fab fa-linkedin-in icon"></i>
                         </a>
                         <a
                             href="https://github.com/nedakinduryte"
                             target="_blank"
                         >
-                            <img
-                                src="resources/github.png"
-                                alt="Github Logo"
-                                class="icon"
-                            />
+                            <i class="fab fa-github icon"></i>
                         </a>
                         <a href="mailto: neda.kinduryte@gmail.com">
-                            <img
-                                src="resources/at.png"
-                                alt="Email Logo"
-                                class="icon"
-                            />
+                            <i class="fas fa-envelope icon"></i>
                         </a>
                         <a>
-                            <img
-                                src="resources/cv.png"
-                                alt="CV Logo"
-                                class="icon"
-                            />
+                            <i class="far fa-file icon"></i>
                         </a>
                     </div>
                 </div>
@@ -89,12 +74,8 @@
                                 target="_blank"
                             >
                                 <button type="button" class="button">
-                                    <img
-                                        src="resources/github-dark.png"
-                                        alt="Github Logo"
-                                        class="github-logo"
-                                    />
-                                    Github
+                                        <i class="fab fa-github github-logo"></i>
+                                        Github
                                 </button>
                             </a>
                         </div>
@@ -423,28 +404,16 @@
                             href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/"
                             target="_blank"
                         >
-                            <img
-                                src="resources/linkedin.png"
-                                alt="LinkedIn Logo"
-                                class="icn"
-                            />
+                            <i class="fab fa-linkedin-in icn"></i>
                         </a>
                         <a
                             href="https://github.com/nedakinduryte"
                             target="_blank"
                         >
-                            <img
-                                src="resources/github.png"
-                                alt="Github Logo"
-                                class="icn"
-                            />
+                            <i class="fab fa-github icn"></i>
                         </a>
                         <a>
-                            <img
-                                src="resources/cv.png"
-                                alt="CV Logo"
-                                class="icn"
-                            />
+                            <i class="far fa-file icn"></i>
                         </a>
                     </div>
                     <div id="separator"></div>
