Changed the input type to a button in a form

--- a/index.html
+++ b/index.html
@@ -441,11 +441,7 @@
                                 class="text"
                                 name="message"
                             ></textarea>
-                            <input
-                                type="submit"
-                                value="send"
-                                id="send-button"
-                            />
+                            <button type="submit" value="send" id="send-button">send</button>
                         </fieldset>
                     </form>
                 </div>
