Changed the default button appearance

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                 class="text"
                                 name="message"
                             ></textarea>
-                            <button type="submit" value="send" id="send-button">send</button>
+                            <button type="submit" value="send" id="send-button" class="button">Send</button>
                         </fieldset>
                     </form>
                 </div>
