Resetting form on submit

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <div id="contact-form">
                 <div id="contact">
                     <h2 id="heading">Contact me</h2>
-                    <form id="contact-details">
+                    <form id="contact-details" onsubmit="resetForm()">
                         <fieldset>
                             <label class="field-name">To</label>
                             <span class="text"
