Changed a button after the message is sent

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                 name="message"
                             ></textarea>
                             <span id="note">Note: Please fill in all the fields above.</span>
-                            <button type="submit" value="send" id="send-button" class="button">Send</button>
+                            <button type="submit" value="send" onclick="changeText()" id="send-button" class="button">Send</button>
                         </fieldset>
                     </form>
                     <div id="social-handles">
