Added nav bar underline on active sections

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div id="hero">
             <div id="nav-bar">
                 <ul id="nav-ul">
-                    <a href="#projects"><li class="nav-li">Projects</li></a>
+                    <a href="#projects"><li class="nav-li" id="projects-li">Projects</li></a>
                     <a href="#certifications"
-                        ><li class="nav-li">Certifications</li></a
+                        ><li class="nav-li" id="certificates-li">Certifications</li></a
                     >
-                    <a href="#contact-form"><li class="nav-li">Contact</li></a>
+                    <a href="#contact-form"><li class="nav-li" id="contact-li">Contact</li></a>
                 </ul>
             </div>
             <div id="header">
