--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <div id="projects">
             <div class="project">
                 <div class="display">
-                    <img src="" alt="Diner App Gif" class="gif" />
+                    <div class="video">
+                        <video width="100%" height="100%" preload="auto" muted controls><source src="resources/diner-app-demo.mp4"></video>
+                    </div>
                     <div class="buttons">
                         <a
                             href="https://nedakinduryte.github.io/dining-finder/"
