--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="project">
                 <div class="display">
                     <div class="video">
-                        <video width="100%" height="100%" preload="auto" muted controls><source src="resources/diner-app-demo.mp4"></video>
+                        <video width="100%" height="100%" preload="auto" muted controls autoplay><source src="resources/diner-app-demo.mp4"></video>
                     </div>
                     <div class="buttons">
                         <a
