Changed elements' colors & on hover colors

--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
                         href="https://www.linkedin.com/in/neda-kinduryte-19ba4114a/"
                         target="_blank"
                     >
-                        <i class="fab fa-linkedin-in icn"></i>
+                        <i class="fab fa-linkedin-in icn icn-bottom"></i>
                     </a>
                     <a href="https://github.com/nedakinduryte" target="_blank">
-                        <i class="fab fa-github icn"></i>
+                        <i class="fab fa-github icn icn-bottom"></i>
                     </a>
                     <a>
-                        <i class="far fa-file icn"></i>
+                        <i class="far fa-file icn icn-bottom"></i>
                     </a>
                 </div>
             </div>
