--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title></title>
-        <meta name="description" content="" />
+        <title>Neda Kinduryte | Front-end Developer | Portfolio Site</title>
+        <meta name="description" content="React and Vanilla JavaScript front-end developer creating well-designed, responsive and SEO-friendly websites." />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
         />
+        <link rel="shortcut icon" type="image/png" href="resources/site-logo.png"/>
         <link rel="stylesheet" href="./styles.css" />
         <link
             rel="stylesheet"
