Added CV to the site

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="mailto: neda.kinduryte@gmail.com">
                             <i class="fas fa-envelope icon"></i>
                         </a>
-                        <a>
+                        <a href="resources/Neda-Kinduryte-cv.pdf" download>
                             <i class="far fa-file icon"></i>
                         </a>
                     </div>
@@ -450,7 +450,7 @@
                     <a href="https://github.com/nedakinduryte" target="_blank">
                         <i class="fab fa-github icn icn-bottom"></i>
                     </a>
-                    <a>
+                    <a href="resources/Neda-Kinduryte-cv.pdf" download>
                         <i class="far fa-file icn icn-bottom"></i>
                     </a>
                 </div>
