Improved code alignment

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Neda Kinduryte | Front-end Developer | Portfolio Site</title>
-        <meta name="description" content="React and Vanilla JavaScript front-end developer creating well-designed, responsive and SEO-friendly websites." />
+        <meta
+            name="description"
+            content="React and Vanilla JavaScript front-end developer creating well-designed, responsive and SEO-friendly websites."
+        />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
         />
-        <link rel="shortcut icon" type="image/png" href="resources/site-logo.png"/>
+        <link
+            rel="shortcut icon"
+            type="image/png"
+            href="resources/site-logo.png"
+        />
         <link rel="stylesheet" href="./styles.css" />
         <link
             rel="stylesheet"
@@ -25,11 +32,17 @@
         <div id="hero">
             <div id="nav-bar">
                 <ul id="nav-ul">
-                    <a href="#projects"><li class="nav-li" id="projects-li">Projects</li></a>
-                    <a href="#certifications"
-                        ><li class="nav-li" id="certificates-li">Certifications</li></a
+                    <a href="#projects"
+                        ><li class="nav-li" id="projects-li">Projects</li></a
                     >
-                    <a href="#contact-form"><li class="nav-li" id="contact-li">Contact</li></a>
+                    <a href="#certifications"
+                        ><li class="nav-li" id="certificates-li">
+                            Certifications
+                        </li></a
+                    >
+                    <a href="#contact-form"
+                        ><li class="nav-li" id="contact-li">Contact</li></a
+                    >
                 </ul>
             </div>
             <div id="header">
@@ -65,7 +78,16 @@
             <div class="project">
                 <div class="display">
                     <div class="video">
-                        <video width="100%" height="100%" preload="auto" muted controls autoplay><source src="resources/diner-app-demo.mp4"></video>
+                        <video
+                            width="100%"
+                            height="100%"
+                            preload="auto"
+                            muted
+                            controls
+                            autoplay
+                        >
+                            <source src="resources/diner-app-demo.mp4" />
+                        </video>
                     </div>
                     <div class="buttons">
                         <a
