Added a new project

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             controls
                             autoplay
                         >
-                            <source src="resources/diner-app-demo.mp4" />
+                            <source src="resources/videos/diner-app-demo.mp4" />
                         </video>
                     </div>
                     <div class="buttons">
@@ -130,17 +130,92 @@
                         <p class="made-using">Made using:</p>
                         <div class="technology">
                             <img
-                                src="resources/javascript.png"
+                                src="resources/icons/javascript.png"
                                 alt="JavaScript"
                                 class="technology-img"
                             />
                             <img
-                                src="resources/react.png"
+                                src="resources/icons/react.png"
                                 alt="React"
                                 class="technology-img"
                             />
                             <img
-                                src="resources/materialui.png"
+                                src="resources/icons/materialui.png"
+                                alt="Material-UI"
+                                class="technology-img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="display">
+                    <div class="video">
+                        <video
+                            width="100%"
+                            height="100%"
+                            preload="auto"
+                            muted
+                            controls
+                            autoplay
+                        >
+                            <source
+                                src="resources/videos/countdown-app-demo.mp4"
+                            />
+                        </video>
+                    </div>
+                    <div class="buttons">
+                        <a
+                            href="https://nedakinduryte.github.io/countdown-app/"
+                            target="_blank"
+                        >
+                            <button type="button" class="button">
+                                See the website
+                            </button>
+                        </a>
+                        <a
+                            href="https://github.com/nedakinduryte/countdown-app"
+                            target="_blank"
+                        >
+                            <button type="button" class="button">
+                                <i class="fab fa-github github-logo"></i>
+                                Github
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="vertical-line"></div>
+                <div class="details">
+                    <div class="description">
+                        <div class="paragraph">
+                            <h2 class="project-name">Countdown App</h2>
+                            <h3 class="project-idea">
+                                An app made to count down the days until your
+                                selected event.
+                            </h3>
+                            <p class="project-description">
+                                Press "Add new countdown", choose the date,
+                                write down the name of the event and press
+                                "Save". The application will calculate the
+                                number of days until the date and display it.
+                                The information you provide is saved to the
+                                browser's local storage.
+                            </p>
+                        </div>
+                        <p class="made-using">Made using:</p>
+                        <div class="technology">
+                            <img
+                                src="resources/icons/typescript.png"
+                                alt="Typescript"
+                                class="technology-img"
+                            />
+                            <img
+                                src="resources/icons/react.png"
+                                alt="React"
+                                class="technology-img"
+                            />
+                            <img
+                                src="resources/icons/materialui.png"
                                 alt="Material-UI"
                                 class="technology-img"
                             />
@@ -158,7 +233,7 @@
                         class="website-link"
                     >
                         <img
-                            src="resources/fcc.jpg"
+                            src="resources/icons/fcc.jpg"
                             alt="FreeCodeCamp Courses"
                             class="website-logo"
                         />
@@ -233,7 +308,7 @@
                         class="website-link"
                     >
                         <img
-                            src="resources/tyler.jpg"
+                            src="resources/icons/tyler.jpg"
                             alt="Tyler McGinnis Courses"
                             class="website-logo"
                         />
@@ -266,7 +341,7 @@
                         class="website-link"
                     >
                         <img
-                            src="resources/cfg.jpg"
+                            src="resources/icons/cfg.jpg"
                             alt="Code First: Girls Program"
                             class="website-logo"
                         />
@@ -317,7 +392,7 @@
                         class="website-link"
                     >
                         <img
-                            src="resources/fcc.jpg"
+                            src="resources/icons/fcc.jpg"
                             alt="Code First: Girls Program"
                             class="website-logo"
                         />
@@ -355,7 +430,7 @@
                         class="website-link"
                     >
                         <img
-                            src="resources/fcc.jpg"
+                            src="resources/icons/fcc.jpg"
                             alt="Code First: Girls Program"
                             class="website-logo"
                         />
