Added Jest to the list of technologies used

--- a/index.html
+++ b/index.html
@@ -194,11 +194,10 @@
                                 selected event.
                             </h3>
                             <p class="project-description">
-                                Press "Add new countdown", choose the date,
-                                write down the name of the event and press
-                                "Save". The application will calculate the
-                                number of days until the date and display it.
-                                The information you provide is saved to the
+                                Choose the date, write down the name of the
+                                event and save. The application will calculate
+                                the number of days until the date and display
+                                it. The information you provide is saved to the
                                 browser's local storage.
                             </p>
                         </div>
@@ -217,6 +216,11 @@
                             <img
                                 src="resources/icons/materialui.png"
                                 alt="Material-UI"
+                                class="technology-img"
+                            />
+                            <img
+                                src="resources/icons/jest.png"
+                                alt="Jest"
                                 class="technology-img"
                             />
                         </div>
