Updated the app description

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <p class="project-description">
                                 Choose the date, write down the name of the
                                 event and save. The application will calculate
-                                the number of days until the date and display
+                                the number of days until the event and display
                                 it. The information you provide is saved to the
                                 browser's local storage.
                             </p>
