Added burger nav on mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </head>
     <body>
         <div id="hero">
+            <input type="checkbox" class="toggler" />
             <div id="nav-bar">
+                <div class="hamburger"><div></div></div>
                 <ul id="nav-ul">
                     <a href="#projects"
                         ><li class="nav-li" id="projects-li">Projects</li></a
