--- a/index.html
+++ b/index.html
@@ -229,6 +229,78 @@
                     </div>
                 </div>
             </div>
+            <div class="project">
+                <div class="display">
+                    <div class="video">
+                        <video
+                            width="100%"
+                            height="100%"
+                            preload="auto"
+                            muted
+                            controls
+                            autoplay
+                        >
+                            <source
+                                src="resources/videos/flower-store-website-demo.mp4"
+                            />
+                        </video>
+                    </div>
+                    <div class="buttons">
+                        <a href="https://jusuziedas.lt/" target="_blank">
+                            <button type="button" class="button">
+                                See the website
+                            </button>
+                        </a>
+                        <a href="#" target="_blank">
+                            <button
+                                type="button"
+                                class="button inactive"
+                                disabled
+                            >
+                                <i class="fab fa-github github-logo"></i>
+                                Github
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="vertical-line"></div>
+                <div class="details">
+                    <div class="description">
+                        <div class="paragraph">
+                            <h2 class="project-name">Flower Store Website</h2>
+                            <h3 class="project-idea">
+                                Website remodeling for a flower store in
+                                Lithuania.
+                            </h3>
+                            <p class="project-description">
+                                Added new features such as email service,
+                                improved the styles and the layout of the
+                                website, uploaded new photos and made sure that
+                                the webpage is compliant with the best SEO
+                                practices.
+                            </p>
+                        </div>
+                        <p class="made-using">Made using:</p>
+                        <div class="technology">
+                            <img
+                                src="resources/icons/html.png"
+                                alt="HTML"
+                                class="technology-img"
+                            />
+                            <img
+                                src="resources/icons/css.png"
+                                alt="CSS"
+                                class="technology-img"
+                            />
+                            <img
+                                src="resources/icons/javascript.png"
+                                alt="JavaScript"
+                                class="technology-img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="certifications">
             <div class="card">
